# music_player

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
angular-ui/: .gitignore  README.md  angular.json  package-lock.json  package.json
angular-ui/e2e/src/: app.e2e-spec.ts
angular-ui/src/: styles.scss
angular-ui/src/app/: app.component.html  app.component.scss
angular-ui/src/environments/: environment.ts
migrations/2021-03-13-101846_init/: down.sql
migrations/2021-03-13-123743_db_updates/: up.sql
migrations/2021-04-21-183711_playlists/: up.sql
music-daemon/: .gitignore  Cargo.toml  Cross.toml
music-daemon/config/: default.json  default.toml  development.json
music-daemon/migrations/2021-03-13-101846_init/: up.sql
music-daemon/migrations/2021-03-13-123743_db_updates/: down.sql
music-daemon/migrations/2021-03-28-114512_populated_tracks/: down.sql  up.sql
music-daemon/migrations/2021-04-21-183711_playlists/: down.sql
music-daemon/src/: main.rs  schema.rs  settings.rs
music-daemon/src/api/: mod.rs
music-daemon/src/crawler/: database.rs  mod.rs
music-daemon/src/models/: albums.rs  artists.rs  images.rs  mod.rs  playlists.rs  tracks.rs
music-daemon/src/paginate/: mod.rs
music-daemon/src/player/: mod.rs
music-daemon/src/ws/: hub.rs  messages.rs  (+2 more)
music-web-ui/: angular.json  karma.conf.js  package-lock.json  package.json
music-web-ui/src/: index.html
src/: main.rs  schema.rs
src/crawler/: database.rs  mod.rs
src/models/: albums.rs  artists.rs  db_updates.rs  images.rs  mod.rs  playlists.rs  tracks.rs
src/player/: mod.rs
(+135 files in other folders)
